BUG: Superbuild - Pass variable Slicer3_TCL_DIR to Slicer3 project and update Package/CMakeLists.txt to consider the variable.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12243 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -175,6 +175,7 @@ endif()
 
 #-----------------------------------------------------------------------------
 # TCL
+set(tcl_build)
 if(Slicer3_USE_KWWIDGETS)
   set(proj tcl)
 
@@ -1075,6 +1076,7 @@ ExternalProject_Add(${proj}
     -DSlicer3_USE_BatchMake=ON
     -DINCR_TCL_LIBRARY:FILEPATH=${slicer_TCL_LIB}
     -DINCR_TK_LIBRARY:FILEPATH=${slicer_TK_LIB}
+    -DSlicer3_TCL_DIR:FILEPATH=${tcl_build}
     -DSlicer3_USE_OPENIGTLINK:BOOL=ON
     -DSLICERLIBCURL_DIR:FILEPATH=${CMAKE_BINARY_DIR}/cmcurl-build
     -DSlicer3_USE_PYTHON:BOOL=${Slicer3_USE_PYTHON}
