ENH: SlicerQT - Add method loadArchetypeVolume to qSlicerCoreIOManager
Note, for now we link against the volumes module logic.

Later on, a module could register itself with the io manager.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12245 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -15,6 +15,9 @@ SET(slicer_qtbase_include_directories
   ${MRMLCLI_SOURCE_DIR}
   ${MRMLCLI_BINARY_DIR}
   ${qCTKWidgets_PYTHONQT_INCLUDE_DIR}
+  # HACK
+  ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
+  ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
   )
   
 # Source files
@@ -54,6 +57,7 @@ SET(slicer_qtbase_target_libraries
   MRMLCLI
   qSlicerBaseQTBase
   ${qCTKWidgets_PYTHONQT_LIBRARIES}
+  vtkSlicerVolumesModuleLogic # HACK
   )
 
 # Resources
