BUG: SlicerQT - Add MRML dependency to QTCore/CMakeLists.txt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12250 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -16,6 +16,8 @@ SET(slicer_qtbase_include_directories
   ${MRMLCLI_BINARY_DIR}
   ${qCTKWidgets_PYTHONQT_INCLUDE_DIR}
   # HACK
+  ${MRML_SOURCE_DIR}
+  ${MRML_BINARY_DIR}
   ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
   ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
   )
@@ -57,7 +59,9 @@ SET(slicer_qtbase_target_libraries
   MRMLCLI
   qSlicerBaseQTBase
   ${qCTKWidgets_PYTHONQT_LIBRARIES}
-  vtkSlicerVolumesModuleLogic # HACK
+  # HACK
+  vtkSlicerVolumesModuleLogic
+  MRML 
   )
 
 # Resources
