ENH: vtkRegisterImage...Configure.h.in include vtkSlicerConfigure.h, but it wasn't needed.   Libraries and execs linked with MRML, but only needed ITK_LIBRARIES.   These changes allow this module to be compiled outside of Slicer.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12262 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
@@ -27,7 +27,7 @@ PROJECT( RegisterImagesModuleApplications )
                ${RegisterImagesSlicer_SOURCE} )
   SET_TARGET_PROPERTIES( RegisterImagesModule 
                          PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint" )
-  TARGET_LINK_LIBRARIES( RegisterImagesModule MRML )
+  TARGET_LINK_LIBRARIES( RegisterImagesModule ${ITK_LIBRARIES} )
 
   # Build the command line
   ADD_EXECUTABLE( RegisterImages ${CLI_SOURCE_DIR}/Templates/CommandLineSharedLibraryWrapper.cxx )
@@ -46,7 +46,7 @@ PROJECT( RegisterImagesModuleApplications )
                ${TransformFromFiducials_SOURCE} )
   SET_TARGET_PROPERTIES( TransformFromFiducialsModule 
                          PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint" )
-  TARGET_LINK_LIBRARIES( TransformFromFiducialsModule MRML )
+  TARGET_LINK_LIBRARIES( TransformFromFiducialsModule ${ITK_LIBRARIES} )
 
   # Build the command line
   ADD_EXECUTABLE( TransformFromFiducials ${CLI_SOURCE_DIR}/Templates/CommandLineSharedLibraryWrapper.cxx)
@@ -98,7 +98,7 @@ PROJECT( RegisterImagesModuleApplications )
 
     ADD_LIBRARY( RegisterImagesModuleLogic RegisterImagesModuleLogic.cxx )
     TARGET_LINK_LIBRARIES( RegisterImagesModuleLogic
-                           MaverickModule MRML SlicerBaseLogic
+                           MaverickModule ${ITK_LIBRARIES} SlicerBaseLogic
                            ITKIO ITKCommon ITKStatistics ITKNumerics )
     MOVE_TO_TOP_BINARY( RegisterImagesModuleLogic
                         RegisterImagesModuleLogic_LIB )
