--- a/Applications/CLI/RegisterImagesModule/MultiResApplications/vtkRegisterImagesModuleMultiResApplicationsConfigure.h.in
+++ b/Applications/CLI/RegisterImagesModule/MultiResApplications/vtkRegisterImagesModuleMultiResApplicationsConfigure.h.in
@@ -3,7 +3,7 @@
  * These values should only change when the target compile platform changes.
  */
 
-#include "vtkSlicerConfigure.h"
+//#include "vtkSlicerConfigure.h"
 
 #cmakedefine BUILD_SHARED_LIBS
 #ifndef BUILD_SHARED_LIBS
