BUG: Bug introduced when python wrapping was added - In FreeSurfer, MRML, vtkTeem CMakeLists.txt, target_link_libraries of wrapped libs and regular libs should be done exclusively.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12263 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRML/CMakeLists.txt
+++ b/Libs/MRML/CMakeLists.txt
@@ -241,7 +241,6 @@ SET(libs
   ITKIO
   ITKDICOMParser
   FreeSurfer
-  ${VTK_LIBRARIES}
   )
   
 IF(MRML_USE_vtkTeem)
@@ -250,11 +249,14 @@ ENDIF(MRML_USE_vtkTeem)
 
 TARGET_LINK_LIBRARIES(${lib_name} ${libs})
 
-IF (VTK_WRAP_TCL)
-  FOREACH(c ${VTK_LIBRARIES})
-    TARGET_LINK_LIBRARIES(${lib_name} ${c}TCL)
-  ENDFOREACH(c)
-ENDIF()
+
+FOREACH(c ${VTK_LIBRARIES})
+  SET(tcl_wrap)
+  IF (VTK_WRAP_TCL)
+    SET(tcl_wrap TCL)
+  ENDIF()
+  TARGET_LINK_LIBRARIES(${lib_name} ${c}${tcl_wrap})
+ENDFOREACH(c)
 
 # Apply user-defined properties to the library target.
 IF(Slicer3_LIBRARY_PROPERTIES)
