ENH: Added support for 2D images when SUPPORT_2D_IMAGES cmake var is set.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12265 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
@@ -27,6 +27,11 @@ PROJECT( RegisterImagesModuleApplications )
                ${RegisterImagesSlicer_SOURCE} )
   SET_TARGET_PROPERTIES( RegisterImagesModule 
                          PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint" )
+  IF( SUPPORT_2D_IMAGES )
+    SET_TARGET_PROPERTIES( RegisterImagesModule 
+                           PROPERTIES COMPILE_FLAGS "-DSUPPORT_2D_IMAGES" )
+  ENDIF( SUPPORT_2D_IMAGES )
+
   TARGET_LINK_LIBRARIES( RegisterImagesModule ${ITK_LIBRARIES} )
 
   # Build the command line
