BUG: compile arguments aren't additive.  So, created a compount argument that includes the moduleEntryPoint as well as the Support-2d-images option.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12266 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
@@ -25,11 +25,12 @@ PROJECT( RegisterImagesModuleApplications )
   ADD_LIBRARY( RegisterImagesModule 
                SHARED 
                ${RegisterImagesSlicer_SOURCE} )
-  SET_TARGET_PROPERTIES( RegisterImagesModule 
-                         PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint" )
   IF( SUPPORT_2D_IMAGES )
     SET_TARGET_PROPERTIES( RegisterImagesModule 
-                           PROPERTIES COMPILE_FLAGS "-DSUPPORT_2D_IMAGES" )
+                           PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint -DSUPPORT_2D_IMAGES" )
+  ELSE( SUPPORT_2D_IMAGES )
+    SET_TARGET_PROPERTIES( RegisterImagesModule 
+                           PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint" )
   ENDIF( SUPPORT_2D_IMAGES )
 
   TARGET_LINK_LIBRARIES( RegisterImagesModule ${ITK_LIBRARIES} )
