ENH: attempt to correct checkout error on blight/district9.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12273 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -745,9 +745,9 @@ endif() # CMAKE_Fortran_COMPILER AND Slicer3_BUILD_NUMPY
 set(proj VTK)
 
 if(Slicer3_USE_VTK_CVSHEAD)
-  set(vtk_tag "-dAP")
+  set(vtk_tag -dAP)
 else()
-  set(vtk_tag "-r VTK-5-4")
+  set(vtk_tag -r VTK-5-4)
 endif()
 
 set(vtk_module VTK)
