ENH: Add support for creating a fixed image region of interest from a slicer ROI input.
This adds a helper function in ConvertSlicerROIToRegion.h that creates an itk::ImageRegion from two points and an image base.

A test class is provided.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12278 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/MultiResApplications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/MultiResApplications/CMakeLists.txt
@@ -15,7 +15,10 @@ PROJECT( RegisterImagesMultiResApplications )
   INCLUDE( ${GenerateCLP_USE_FILE} )
 
   # Setup the source and paths
-  SET( RegisterImagesMultiRes_SOURCE RegisterImagesMultiRes.cxx ScalingHeuristics.cxx) 
+  SET( RegisterImagesMultiRes_SOURCE 
+    RegisterImagesMultiRes.cxx 
+    ScalingHeuristics.cxx
+    ConvertSlicerROIToRegion.cxx) 
   GENERATECLP( RegisterImagesMultiRes_SOURCE
                RegisterImagesMultiRes.xml )
   INCLUDE_DIRECTORIES( ${RegisterImagesMultiResApplications_BINARY_DIR} )
