ENH: Enable box ROI in RegisterImagesMultiRes.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12280 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/MultiResApplications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/MultiResApplications/CMakeLists.txt
@@ -29,7 +29,7 @@ PROJECT( RegisterImagesMultiResApplications )
                ${RegisterImagesMultiRes_SOURCE} )
   SET_TARGET_PROPERTIES( RegisterImagesMultiResModule
                          PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint" )
-  TARGET_LINK_LIBRARIES( RegisterImagesMultiResModule ${ITK_LIBRARIES} )
+  TARGET_LINK_LIBRARIES( RegisterImagesMultiResModule ITKAlgorithms ITKIO )
 
   # Build the command line 
   ADD_EXECUTABLE( RegisterImagesMultiRes ${CLI_SOURCE_DIR}/Templates/CommandLineSharedLibraryWrapper.cxx )
