ENH: Add qCTKRangeSlider: a QSlider with 2 handles that can define a range.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12285 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -81,6 +81,8 @@ SET(qCTKWidgets_SRCS
   qCTKModelTester.h
   qCTKNumericInput.cxx
   qCTKNumericInput.h
+  qCTKRangeSlider.cxx
+  qCTKRangeSlider.h
   qCTKSettings.cxx
   qCTKSettings.h
   qCTKSliderSpinBoxWidget.cxx
@@ -111,6 +113,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKMenuButton.h
   qCTKModelTester.h
   qCTKNumericInput.h
+  qCTKRangeSlider.h
   qCTKSettings.h
   qCTKSliderSpinBoxWidget.h
   qCTKTestApplication.h
