ENH: SlicerQt: add icons to the qCTKWidgets plugins in Qt Designer
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12286 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/Plugins/CMakeLists.txt
+++ b/Libs/qCTKWidgets/Plugins/CMakeLists.txt
@@ -69,6 +69,7 @@ qctk_build_designer_plugin(
   NAME ${PROJECT_NAME}
   SRCS ${designer_plugin_SRCS}
   MOC_SRCS ${designer_plugin_MOC_SRCS}
+  RESOURCES Resources/qCTKWidgetsPlugins.qrc
   TARGET_LIBRARIES ${designer_plugin_TARGET_LIBRARIES}
   )
 
