ENH: adding a test to load a color file, add it to the scene, save the scene, clear the scene, then load the scene back in. also loads a test volume and assigns it the new color node if the volumes logic exists
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12308 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRML/Testing/CMakeLists.txt
+++ b/Libs/MRML/Testing/CMakeLists.txt
@@ -216,3 +216,5 @@ FOREACH( SceneToTest ${ScenesToTest} )
   TEST_SCENE( ${SceneToTest} )
 ENDFOREACH( SceneToTest )
 
+# add a tcl test to check that colour files get loaded and saved properly to mrml files and loaded again
+ADD_TEST(Slicer3ColorStorageNodeSceneTest ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Libs/MRML/Testing/Tcl/TestColorStorageNodeInScene.tcl)
