ENH: Use qMRMLNodeComboBox as the default node selector. (add the None option)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12318 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Testing/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/Testing/CMakeLists.txt
@@ -7,6 +7,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qMRMLListWidgetTest1.cxx
   qMRMLMatrixWidgetTest1.cxx
   qMRMLModelTest1.cxx
+  qMRMLNodeComboBoxTest1.cxx
   qMRMLNodeFactoryTest1.cxx
   qMRMLNodeSelectorTest1.cxx
   qMRMLNodeTreeSelectorTest1.cxx
@@ -42,6 +43,7 @@ SIMPLE_TEST( qMRMLLinearTransformSliderTest1 )
 SIMPLE_TEST( qMRMLListWidgetTest1 )
 SIMPLE_TEST( qMRMLMatrixWidgetTest1 )
 SIMPLE_TEST( qMRMLModelTest1 )
+SIMPLE_TEST( qMRMLNodeComboBoxTest1 )
 SIMPLE_TEST( qMRMLNodeFactoryTest1 )
 SIMPLE_TEST( qMRMLNodeSelectorTest1 )
 SIMPLE_TEST( qMRMLNodeTreeSelectorTest1 )
