COMP: fix missing ')'
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12337 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -274,7 +274,7 @@ if(Slicer3_USE_KWWIDGETS)
   elseif(APPLE)
     set(itcl_BUILD_IN_SOURCE 1)
     #set(itcl_CONFIGURE_COMMAND sh configure --with-tcl=${tcl_build}/lib --with-tk=${tcl_build}/lib --prefix=${tcl_build})
-    set(itcl_CONFIGURE_COMMAND 
+    set(itcl_CONFIGURE_COMMAND)
     set(itcl_BUILD_COMMAND make ${parallelism_level} all)
     set(itcl_INSTALL_COMMAND make install)
     
