--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -240,6 +240,7 @@ proc launch_SetEnvironment {} {
       set ::env(MRMLIDImageIO_DIR)  $::env(Slicer3_HOME)/lib/MRMLIDImageIO
       set ::env(Qdec_DIR)           $::env(Slicer3_HOME)/lib/Qdec
       set ::env(RemoteIO_DIR)       $::env(Slicer3_HOME)/lib/RemoteIO
+      set ::env(FileWatcher_DIR)    $::env(Slicer3_HOME)/lib/FileWatcher
       set ::env(SlicerIO_DIR)       $::env(Slicer3_HOME)/lib/SlicerIO
       set ::env(tclap_DIR)          $::env(Slicer3_HOME)/lib/tclap
       set ::env(vtkITK_DIR)         $::env(Slicer3_HOME)/lib/vtkITK
@@ -386,6 +387,7 @@ proc launch_SetEnvironment {} {
       set ::env(MRMLIDImageIO_DIR)  [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(Qdec_DIR)           [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(RemoteIO_DIR)       [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
+      set ::env(FileWatcher_DIR)    [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(SlicerIO_DIR)       [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(tclap_DIR)          [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(vtkITK_DIR)         [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
@@ -566,6 +568,7 @@ proc launch_SetPaths {} {
             set ::env(LD_LIBRARY_PATH) $::env(MRMLIDImageIO_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(Qdec_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(RemoteIO_DIR):$::env(LD_LIBRARY_PATH)
+            set ::env(LD_LIBRARY_PATH) $::env(FileWatcher_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(SlicerIO_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(tclap_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(vtkITK_DIR):$::env(LD_LIBRARY_PATH)
@@ -615,6 +618,7 @@ proc launch_SetPaths {} {
             set ::env(DYLD_LIBRARY_PATH) $::env(MRMLIDImageIO_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(Qdec_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(RemoteIO_DIR):$::env(DYLD_LIBRARY_PATH)
+            set ::env(DYLD_LIBRARY_PATH) $::env(FileWatcher_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(SlicerIO_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(tclap_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(vtkITK_DIR):$::env(DYLD_LIBRARY_PATH)
@@ -661,6 +665,7 @@ proc launch_SetPaths {} {
             set ::env(Path) $::env(MRMLIDImageIO_DIR)\;$::env(Path)
             set ::env(Path) $::env(Qdec_DIR)\;$::env(Path)
             set ::env(Path) $::env(RemoteIO_DIR)\;$::env(Path)
+            set ::env(Path) $::env(FileWatcher_DIR)\;$::env(Path)
             set ::env(Path) $::env(SlicerIO_DIR)\;$::env(Path)
             set ::env(Path) $::env(tclap_DIR)\;$::env(Path)
             set ::env(Path) $::env(vtkITK_DIR)\;$::env(Path)
